--- a/.dockstore.yml
+++ b/.dockstore.yml
@@ -15,3 +15,8 @@ workflows:
    primaryDescriptorPath: /workflows/serratia_assemble.wdl
    testParameterFiles:
     - empty.json
+- name: get_coverage
+  subclass: WDL
+  primaryDescriptorPath: /workflows/get_coverage.wdl
+  testParameterFiles:
+    - empty.json
