--- a/.dockstore.yml
+++ b/.dockstore.yml
@@ -15,6 +15,11 @@ workflows:
    primaryDescriptorPath: /workflows/serratia_assemble.wdl
    testParameterFiles:
     - empty.json
+ - name: get_coverage
+   subclass: WDL
+   primaryDescriptorPath: /workflows/get_coverage.wdl
+   testParameterFiles:
+    - empty.json
  - name: Get_Coverage
    subclass: WDL
    primaryDescriptorPath: /workflows/get_coverage.wdl
